Fixed media queries on smaller screens for font in projects and background image placement

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -47,7 +47,7 @@ header nav ul {
     justify-content: space-between;
     align-items: center;
     list-style: none;
-  }
+}
 
 header nav ul li a {
     padding: 10px 15px;
@@ -163,12 +163,12 @@ body {
     width: 100%;
 }
 
-.project-name h2 {
+.project h2 {
     font-size: 35px;
     line-height: 1.3;
 }
 
-.project-code h3 {
+.project h3 {
     font-size: 25px;
     line-height: 1.3;
 }
@@ -454,22 +454,31 @@ and (orientation : portrait) {
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 
 @media screen and (max-width: 980px) {
+    header nav ul li a {
+        font-size: 30px;
+    }
+
+    .hero {
+        background-size: cover;
+        background-position: top 10%;
+        background-attachment: scroll;
+    }  
+
     .project {
         flex-basis: 100%;
         justify-content: space-evenly;
-
     }
 
-    .project-name h2 {
-        font-size: 35px;
+    .project h2 {
+        font-size: 40px;
     }
     
-    .project-code h3 {
-        font-size: 25px;
+    .project h3 {
+        font-size: 30px;
     }
 
     .project p {
-        font-size: x-large
+        font-size: 25px;
     }
 }
 
@@ -490,11 +499,7 @@ and (orientation : portrait) {
         flex-basis: 100%;
     }
     */
-    header nav ul li a {
-        /*padding: 10px 15px;
-        font-weight: lighter; 
-        text-shadow: 0 0 10px rgba(0, 0, 0, 0.5); */
-        font-size: 30px;
+
         
     
     }
